--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     
     <div class="sidebar">
-      <a href="#" id="desafioTecnico" class="itemSidebar"> <i class="fas fa-code"></i> &nbsp; Desafío técnico</a> 
+      <a href="#" id="presentacion" class="itemSidebar"> <i class="fas fa-code"></i> &nbsp; Presentación</a> 
       <a href="#" id="cuento" class="itemSidebar"><i class="fas fa-align-left"></i> &nbsp; Cuentito coder</a>
       <a href="#" id="musica" class="itemSidebar"> <i class="fas fa-music"></i> &nbsp;  Música</a>
     </div>
